# sim-report

./: .gitignore  README.md  pyproject.toml  setup.py
cpp-limit-order-book/: .gitignore  Makefile  README.md
cpp-limit-order-book/include/lob/: latency_histogram.hpp  memory_pool.hpp  order_book.hpp  ring_buffer.hpp  types.hpp
cpp-limit-order-book/src/: benchmark.cpp  latency_histogram.cpp  main.cpp  order_book.cpp  types.cpp
cpp-limit-order-book/tests/: order_book_tests.cpp
cpp-limit-order-book/tools/: generate_orders.py
examples/: dualband_pb.csv  sweep.csv
examples/basic/results/: design.py  metrics.csv  params.json
src/meep_report/: __init__.py  charts.py  cli.py  hdf5.py  logs.py  metrics.py  models.py  parameters.py  report.py  scanner.py
src/phasegrid/: __init__.py  _phasegrid_cpp.cpp  backend.py  benchmark.py  channels.py  cli.py  designer.py  fit.py  layout.py  library.py  losses.py  patterns.py  pipeline.py  plots.py  search.py  solvers.py  svg.py  sweep.py
src/sim_report/: __init__.py  cli.py  report.py
tests/: test_backend.py  test_benchmark.py  test_designer.py  test_library_report.py  test_metrics.py  test_multichannel.py  test_parameters.py  test_phasefit.py  test_pipeline.py  test_report.py  test_search.py  test_sweep.py
