[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "meep-report"
version = "0.2.0"
description = "Generate Markdown reports, figures, and parameter tables from Meep/FDTD simulation results."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "meep-report contributors" }]
keywords = ["meep", "fdtd", "photonics", "metalens", "simulation", "report"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
meep-report = "meep_report.cli:main"
fdtd-report = "meep_report.cli:main"

[project.optional-dependencies]
hdf5 = ["h5py>=3.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

